src/components/Analysis/Analysis.module.css
.container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 98vh;
    gap: 40px;
}

.menu {
    width: 480px;
    height: 850px;
    background-color: #464146;
}

.loadPGN {
    height: 10%;
}

.history {
    /* margin-left: 10px; */
    display: flex;
    flex-wrap:wrap;
    /* height: 90%; */
    color: white;
    font-size: 19px;
    font-family: 'Raleway', sans-serif;
}

.moveNum {
    color: #918D8D;
    padding: 3px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.subAnalysis {
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    padding: 3px;
    margin: 5px 0;
    background-color: rgba(52,48,52,0.5);
}

.subAnalysisInside {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
}

